// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileIssueDetailsButtonTest render with an issue tracker path 1`] = `
<React.Fragment>
  <CustomizedDefaultButton
    className="create-bug-button"
    componentRef={
      Object {
        "current": null,
      }
    }
    href="https://github.com/example/example/issues/new?title=buildTitle&body=buildText"
    iconProps={
      Object {
        "iconName": "ladybugSolid",
      }
    }
    onClick={[Function]}
    target="_blank"
  >
    File issue
  </CustomizedDefaultButton>
  <FileIssueDetailsDialog
    buttonRef={
      Object {
        "current": null,
      }
    }
    fileIssueDetailsHandler={
      FileIssueDetailsHandler {
        "htmlElementUtils": HTMLElementUtils {
          "clientWindow": [Window],
          "dom": Document {
            "location": Location {
              "assign": [Function],
              "hash": "",
              "host": "localhost",
              "hostname": "localhost",
              "href": "http://localhost/",
              "origin": "http://localhost",
              "pathname": "/",
              "port": "",
              "protocol": "http:",
              "reload": [Function],
              "replace": [Function],
              "search": "",
              "toString": [Function],
            },
          },
        },
      }
    }
    getSettingsPanel={[Function]}
    isOpen={false}
    onDismiss={[Function]}
    onOpenSettings={[Function]}
    restoreFocus={false}
  />
</React.Fragment>
`;

exports[`FileIssueDetailsButtonTest render without issue tracker set 1`] = `
<React.Fragment>
  <CustomizedDefaultButton
    className="create-bug-button"
    componentRef={
      Object {
        "current": null,
      }
    }
    disabled={true}
    iconProps={
      Object {
        "iconName": "ladybugSolid",
      }
    }
  >
    File issue
  </CustomizedDefaultButton>
  <FileIssueDetailsDialog
    buttonRef={
      Object {
        "current": null,
      }
    }
    fileIssueDetailsHandler={
      FileIssueDetailsHandler {
        "htmlElementUtils": HTMLElementUtils {
          "clientWindow": [Window],
          "dom": Document {
            "location": Location {
              "assign": [Function],
              "hash": "",
              "host": "localhost",
              "hostname": "localhost",
              "href": "http://localhost/",
              "origin": "http://localhost",
              "pathname": "/",
              "port": "",
              "protocol": "http:",
              "reload": [Function],
              "replace": [Function],
              "search": "",
              "toString": [Function],
            },
          },
        },
      }
    }
    getSettingsPanel={[Function]}
    isOpen={false}
    onDismiss={[Function]}
    onOpenSettings={[Function]}
    restoreFocus={false}
  />
</React.Fragment>
`;
